<resources>
    <string name="greetings_title">Organize your movies</string>
    <string name="popular_title">Popular</string>
    <string name="top_rated_title">Top Rated</string>
    <string name="up_coming_title">Up Coming</string>
    <string name="empty_data_title">Empty Data</string>
    <string name="sample_desc">A small boy\'s disappearance in a small town uncovers a mystery involving secret experiments, terrifying supernatural powers, and a strange little girl.\nLucas, Mike and Dustin try to talk to a girl they met in the woods. Hopper asked an agitated Joyce about the troubling phone call.</string>
    <string name="temp_desc">After reuniting with Gwen Stacy, Brooklyn’s full-time, friendly neighborhood Spider-Man is catapulted across the Multiverse, where he encounters the Spider Society, a team of Spider-People charged with protecting the Multiverse’s very existence. But when the heroes clash on how to handle a new threat, Miles finds himself pitted against the other Spiders and must set out on his own to save those he loves most.</string>
    <string name="fragment_movie_search_top_title">Pencarian Teratas</string>
    <string name="download">Download</string>
    <string name="favourite">Favourite</string>
    <string name="saved">Saved</string>
    <string name="play_now">Play now</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="see_all">See all</string>
    <string name="dot">.</string>
    <string name="old">18+</string>
    <string name="search">Search</string>
    <string name="search_label">Search for a list or movie</string>
    <string name="greetings_desc">Lets organize your movies with priority and do everything without stress</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="last_name_label">LAST NAME</string>
    <string name="first_name_label">FIRST NAME</string>
    <string name="first_name_hint">first name</string>
    <string name="last_name_hint">last name</string>
    <string name="phone_label">PHONE</string>
    <string name="phone_hint">0815 8844 424</string>
    <string name="email_label">EMAIL</string>
    <string name="token_label">TOKEN</string>
    <string name="email_hint">miracle@example.com</string>
    <string name="password_label">PASSWORD</string>
    <string name="password_hint">create password</string>
    <string name="create_an_new_account_label">Create an new account</string>
    <string name="profile_desc">Below is your information that we have</string>
    <string name="setting_desc">You can change the settings according to the restrictions</string>
    <string name="register_label">Register</string>
    <string name="setting_label">Setting</string>
    <string name="profile_label">Profile</string>
    <string name="logout_label">LOGOUT</string>
    <string name="tnc_title_label">By creating an account, you accept our</string>
    <string name="tnc_link_label"><![CDATA[Terms & Conditions]]></string>
    <string name="register_login_title_label">Already have an account?</string>
    <string name="register_login_link_label">Log In</string>
    <string name="login_label">Log In</string>
    <string name="login_instruction">Input your email and password</string>
    <string name="register_instruction">Create an new account ?</string>

    <!-- for firebase messaging -->
    <string name="default_web_client_id">465702451697-bipva1tqhabv79ksbsn2armk6i9njqlv.apps.googleusercontent.com</string>
    <string name="default_notification_channel_id">com.kotlin.learn</string>

</resources>