<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_wallpaper_portrait_blue_gradient"
    tools:context=".presentation.ui.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_anim"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:src="@drawable/ic_align_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:fontFamily="@font/tt_interphases_bold"
            android:text="@string/profile_label"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_anim" />

        <TextView
            android:id="@+id/tv_title_create"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_16"
            android:fontFamily="@font/tt_interphases_regular"
            android:text="@string/profile_desc"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/iv_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_image"
            android:layout_width="@dimen/dp_64"
            android:layout_height="@dimen/dp_64"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_title"
            app:shapeAppearance="@style/ShapeAppearance.Image.Circle"
            tools:src="@tools:sample/avatars" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/dp_32"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tt_interphases_regular"
                android:text="@string/first_name_label"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_firstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_16"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="false"
                android:cursorVisible="false"
                android:drawableRight="@drawable/ic_action_checklist_blue"
                android:focusable="false"
                android:fontFamily="@font/tt_interphases_bold"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_20"
                android:textColor="@color/colorOnButton"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toStartOf="@+id/et_lastName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_firstName" />

            <TextView
                android:id="@+id/tv_lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tt_interphases_regular"
                android:text="@string/last_name_label"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/et_lastName"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_lastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="false"
                android:cursorVisible="false"
                android:drawableRight="@drawable/ic_action_checklist_blue"
                android:focusable="false"
                android:fontFamily="@font/tt_interphases_bold"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_20"
                android:textColor="@color/colorOnButton"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/et_firstName"
                app:layout_constraintTop_toBottomOf="@+id/tv_lastName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_name">

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tt_interphases_regular"
                android:text="@string/email_label"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="false"
                android:cursorVisible="false"
                android:drawableRight="@drawable/ic_action_checklist_blue"
                android:focusable="false"
                android:fontFamily="@font/tt_interphases_bold"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_20"
                android:textColor="@color/colorOnButton"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_email">

            <TextView
                android:id="@+id/tv_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tt_interphases_regular"
                android:text="@string/token_label"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="false"
                android:cursorVisible="false"
                android:drawableRight="@drawable/ic_action_checklist_blue"
                android:focusable="false"
                android:fontFamily="@font/tt_interphases_regular"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:paddingBottom="@dimen/dp_20"
                android:singleLine="false"
                android:textColor="@color/colorOnButton"
                android:textSize="@dimen/sp_12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_token" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_token">

            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tt_interphases_regular"
                android:text="@string/logout_label"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:text="Logout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_logout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>